# easyFFT

./: CMakeLists.txt  README.md
src/: CLUtils.hpp  CMakeLists.txt  Exception.hpp  IPlan.hpp  IPlanCL.hpp  IPlanFFTW.hpp  Plan.cpp  Plan.h  Plan.hpp  PlanCLFloat.cpp  PlanCLFloat.h  PlanComplex.hpp  PlanFFTWFloat.cpp  PlanFFTWFloat.h  PlanFloat.cpp  PlanFloat.h  easyFFT.cpp  rfft.cpp
src/include/: easyFFT.h  rfft.h
src/utils/: Device.hpp  opencl_tools.hpp  vulkan_tools.hpp
src/vkFFT/: vkFFT.h
test/: CMakeLists.txt  test1.cpp
test/lib/docs/_layouts/: default.html
